--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
     "editor.defaultFormatter": "esbenp.prettier-vscode",
     "editor.codeActionsOnSave": {
-        "editor.formatOnSave": true,
-        "source.fixAll.eslint": true
+        "editor.formatOnSave": "explicit",
+        "source.fixAll.eslint": "explicit"
     }
 }
