--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "lint": "next lint"
     },
     "dependencies": {
-        "jstat": "^1.9.6",
+        "mathjs": "^14.3.1",
         "next": "15.1.6",
         "react": "^19.0.0",
         "react-dom": "^19.0.0"
